Merge branch 'master' of https://github.com/cerijerome/ceri-priv Code inspection fixes
# Conflicts:
#	ceri-learning/src/main/java/ceri/learning/mongo/MongoServer.java